:sparkles: user api 문서에 jwt 적용